--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,9 +6,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th><a id="title_header">Movie Title</a></th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th><a id="release_date_header">Release Date</a></th>
       <th>More Info</th>
     </tr>
   </thead>
