--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,7 +6,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class="<%@title%>">
+        <%= link_to 'Movie Title', movies_path(sort: :title), :id => 'title_header'%>
+      </th>
       <th>Rating</th>
       <th>Release Date</th>
       <th>More Info</th>
