--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,7 +6,7 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th class="<%@title%>">
+      <th class="<%=@title_header%>" >
         <%= link_to 'Movie Title', movies_path(sort: :title), :id => 'title_header'%>
       </th>
       <th>Rating</th>
