--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,16 +1,27 @@
 <!--  This file is app/views/movies/index.html.erb -->
 <h2>All Movies</h2>
 
-<%#  Part 2: Start here... %>
+<%= form_tag movies_path, method: :get, id: 'ratings_form' do %>
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <div class="form-check form-check-inline">
+      <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
+      <%= check_box_tag "ratings[#{rating}]", "1", @ratings_to_show.include?(rating), class: 'form-check-input' %>
+    </div>
+  <% end %>
+  <%= submit_tag 'Refresh', id: 'filter_ratings', class: 'btn btn-primary' %>
+<% end %>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
       <th class="<%=@title_header%>" >
-        <%= link_to 'Movie Title', movies_path(sort: :title), :id => 'title_header'%>
+        <%= link_to 'Movie Title', movies_path(sort: 'title'), :id => 'title_header'%>
       </th>
       <th>Rating</th>
-      <th><a id="release_date_header">Release Date</a></th>
+      <th class="<%=@release_date_header%>"> 
+        <%= link_to 'Release Date', movies_path(sort: 'release_date'), :id => 'release_date_header'%>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
